# wtfsic

./: .gitignore  CONTRIBUTING.md  README.md  manage.py  pyproject.toml
backend/: manage.py
backend/main/: settings.py  urls.py
backend/recipes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_auto_20200905_1240.py
backend/wtfsic/: asgi.py  settings.py  urls.py  wsgi.py
wtfsic/: asgi.py  package-lock.json  package.json  settings.py  wsgi.py
wtfsic/src/: App.css  App.js
wtfsic/src/components/: AddRecipeForm.jsx  AddRecipeForm.style.css  Button.style.css
wtfsic/src/components/Recipe/: Image.jsx  Image.style.css  Recipe.jsx  RecipeCard.jsx  RecipeCard.style.css  RecipeLister.jsx  RecipeLister.style.css
wtfsic/src/helpers/: durations.js
