[tool.poetry]
name = "wtfsic"
version = "0.1.0"
description = "An app for desperate veggos"
authors = ["MissaDavid <mei.chohee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.7"
envparse = "^0.2.0"
djangorestframework = "^3.11.0"
drf-yasg = "^1.17.1"
django-stdimage = "^5.1.1"
ipython = "^7.17.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.3"
pytest-django = "^3.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
